# KeyTweak

./: .gitignore  dev-build.bat  index.html  package-lock.json  package.json  tailwind.config.js  toast.html  vite.config.ts
public/: index.html
src/: App.tsx  index.css  main.tsx  toast.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autoreplace.rs  autostart.rs  capslock.rs  clipboard.rs  commands.rs  config.rs  exclusions.rs  key_remap.rs  keyboard_hook.rs  keys.rs  libretranslate_server.rs  main.rs  state.rs  toast.rs  translate.rs  tray.rs  window.rs
src/components/: ApiKeysSettings.tsx  AutoReplaceSettings.tsx  CapsLockSettings.tsx  ExceptionsSettings.tsx  GeneralSettings.tsx  KeyCaptureInput.tsx  KeyRemapSettings.tsx  PanelShell.tsx  ProgramCombobox.tsx  Sidebar.tsx  TitleBar.tsx  ToastWindow.tsx  TranslateSettings.tsx
src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  table.tsx
src/lib/: commands.ts  keys.ts
src/types/: config.ts
