[package]
name = "keytweak"
version = "0.1.0"
edition = "2021"

[lib]
name = "keytweak"
path = "src/lib.rs"

[[bin]]
name = "keytweak"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
arboard = "3.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2.0"
rfd = "0.15"
thiserror = "1.0"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3.10"
